--- a/eLibrary/src/main/webapp/asset/css/admin.css
+++ b/eLibrary/src/main/webapp/asset/css/admin.css
@@ -110,11 +110,21 @@
     overflow: hidden;
 }
 
+#view,
 #add {
     position: relative;
     width: 100%;
     height: 40.5px;
     margin: 50px 0px 0px;
+}
+
+.view-btn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 1.8rem;
+    padding: 10px 20px;
+    margin-left: 30px;
 }
 
 .add-btn {
